Fix for navbar z-index

--- a/static/css/Defaultv3/theme.css
+++ b/static/css/Defaultv3/theme.css
@@ -275,6 +275,7 @@ table tbody tr {
   background-color: var(--navbar-background);
   box-shadow: var(--box-shadow);
   list-style-type: none;
+  z-index: 90;
 }
 
 .navbar a {
